[package]
name = "ludusavi"
version = "0.23.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Game save backup tool"
repository = "https://github.com/mtkennerly/ludusavi"
readme = "README.md"
license = "MIT"

[dependencies]
base64 = "0.22.0"
byte-unit = "5.1.4"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive", "wrap_help"] }
clap_complete = "4.5.1"
dialoguer = "0.11.0"
dirs = "5.0.1"
filetime = "0.2.23"
flexi_logger = { version = "0.27.4", features = ["async"] }
fluent = "0.16.0"
fuzzy-matcher = "0.3.7"
globetter = "0.2.0"
globset = "0.4.14"
iced = { version = "0.12.1", features = ["advanced", "tokio"] }
iced_style = "0.12.1"
image = { version = "0.24.9", features = ["ico"], default-features = false }
indicatif = { version = "0.17.8", features = ["rayon"] }
intl-memoizer = "0.5.1"
itertools = "0.12.1"
log = "0.4.21"
native-dialog = "=0.6.3"  # https://github.com/native-dialog-rs/native-dialog-rs/issues/41#issuecomment-2048336796
once_cell = "1.19.0"
opener = "0.6.1"
rayon = "1.9.0"
regex = "1.10.3"
reqwest = { version = "0.11.25", features = ["blocking", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.8.25"
sha1 = "0.10.6"
shlex = "1.3.0"
signal-hook = "0.3.17"
steamlocate = "2.0.0-beta.2"
tokio = { version = "1.36.0", features = ["macros", "time"] }
typed-path = "0.8.0"
unic-langid = "0.9.4"
walkdir = "2.5.0"
which = "6.0.0"
whoami = "1.5.0"
zip = "0.6.6"

[target.'cfg(windows)'.dependencies]
known-folders = "1.1.0"
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["wincon"], default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
pretty_assertions = "1.4.0"
velcro = "0.5.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
