[package]
name = "ludusavi"
version = "0.25.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Game save backup tool"
repository = "https://github.com/mtkennerly/ludusavi"
readme = "README.md"
license = "MIT"

[dependencies]
base64 = "0.22.1"
byte-unit = "5.1.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
clap_complete = "4.5.28"
dialoguer = "0.11.0"
dirs = "5.0.1"
filetime = "0.2.25"
flexi_logger = { version = "0.29.0", features = ["async"] }
fluent = "0.16.1"
fuzzy-matcher = "0.3.7"
globetter = "0.2.0"
globset = "0.4.15"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
image = { version = "0.25.2", features = ["ico"], default-features = false }
indicatif = { version = "0.17.8", features = ["rayon"] }
intl-memoizer = "0.5.2"
itertools = "0.13.0"
log = "0.4.22"
native-dialog = "=0.6.3"  # https://github.com/native-dialog-rs/native-dialog-rs/issues/41#issuecomment-2048336796
once_cell = "1.19.0"
opener = "0.7.2"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "gzip", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32.1", features = ["bundled"] }
schemars = { version = "0.8.21", features = ["chrono"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.8.25"
sha1 = "0.10.6"
shlex = "1.3.0"
signal-hook = "0.3.17"
steamlocate = "2.0.0-beta.2"
tokio = { version = "1.40.0", features = ["macros", "time"] }
typed-path = "0.9.2"
unic-langid = "0.9.5"
walkdir = "2.5.0"
which = "6.0.3"
whoami = "1.5.2"
zip = "0.6.6"

[target.'cfg(windows)'.dependencies]
known-folders = "1.2.0"
winreg = "0.52.0"
windows = { version = "0.58.0", features = ["Win32_System_Console", "Win32_System_Threading"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
velcro = "0.5.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
