[package]
name = "ludusavi"
version = "0.30.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Game save backup tool"
repository = "https://github.com/mtkennerly/ludusavi"
readme = "README.md"
license = "MIT"

[[bin]]
name = "ludusavi"
required-features = ["app"]

[features]
default = ["app"]
# GUI and CLI
app = [
    "dep:clap",
    "dep:clap_complete",
    "dep:dialoguer",
    "dep:flexi_logger",
    "dep:iced",
    "dep:image",
    "dep:indicatif",
    "dep:rfd",
    "dep:signal-hook",
]

[dependencies]
base64 = "0.22.1"
byte-unit = "5.1.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive", "wrap_help"], optional = true }
clap_complete = { version = "4.5.28", optional = true }
dialoguer = { version = "0.11.0", optional = true }
dirs = "5.0.1"
filetime = "0.2.25"
flexi_logger = { version = "0.29.3", features = ["textfilter"], default-features = false, optional = true }
fluent = "0.16.1"
fuzzy-matcher = "0.3.7"
globetter = "0.2.0"
globset = "0.4.15"
iced = { version = "0.14.0", features = ["advanced", "advanced-shaping", "crisp", "image", "lazy", "svg", "tiny-skia", "tokio", "wayland", "wgpu", "x11"], default-features = false, optional = true }
image = { version = "0.25.2", features = ["ico"], default-features = false, optional = true }
indicatif = { version = "0.17.8", features = ["rayon"], optional = true }
intl-memoizer = "0.5.2"
itertools = "0.13.0"
log = "0.4.22"
opener = "0.7.2"
rayon = "1.10.0"
regashii = "0.2.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "gzip", "rustls-tls"], default-features = false }
rfd = { version = "0.15.0", features = ["common-controls-v6", "gtk3"], default-features = false, optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"] }
schemars = { version = "0.8.21", features = ["chrono"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.8.25"
sha1 = "0.10.6"
shlex = "1.3.0"
signal-hook = { version = "0.3.17", optional = true }
steamlocate = "2.0.0"
strsim = "0.11.1"
sysinfo = "0.36.0"
tokio = { version = "1.40.0", features = ["macros", "time"] }
typed-path = "0.9.2"
unic-langid = "0.9.5"
walkdir = "2.5.0"
which = "6.0.3"
whoami = "1.5.2"
zip = "0.6.6"

[target.'cfg(windows)'.dependencies]
known-folders = "1.2.0"
winreg = "0.52.0"
windows = { version = "0.60.0", features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
velcro = "0.5.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-win64{ archive-suffix }"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-win32{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-mac{ archive-suffix }"
pkg-fmt = "tgz"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
to_string_trait_impl = "allow"
too_many_arguments = "allow"
